# dd-dogic

./: README.md  pyproject.toml
dd_dogic/: __init__.py  cli.py  nodes.py  pipeline.py
tests/: test_pipeline.py
