[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-dogic"
version = "0.1.0"
authors = [
  { name="Digital Duck & Dog Team", email="info@digitalduck.org" },
]
description = "dd-dogic: universal document converter pipeline (dog + logic). Extract → Transform → Format."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dd-extract",
    "dd-format",
    "pocoflow",
    "click>=8.0",
]

[project.optional-dependencies]
docling = ["docling"]
docx    = ["python-docx>=1.0"]
all     = ["docling", "python-docx>=1.0"]

[project.urls]
"Homepage" = "https://github.com/digital-duck/dd-dogic"

[project.scripts]
dd-dogic = "dd_dogic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_dogic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
